--- a/website/index.html
+++ b/website/index.html
@@ -8,13 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Custom CSS -->
     <link href="assets/css/style.css?v0.1" rel="stylesheet">
 </head>
 
-<body>
+<body class="p-3 mb-2 bg-white text-dark">
 
     <!-- Navigation -->
     <div class="container-fluid">
@@ -25,7 +26,13 @@
     <!-- Page Content -->
     <div class="container-fluid">
         <!-- First Featurette -->
-        <span require-file="./templates/first_heading.html"></span>
+        <div class="containter">
+            <h1>The First Heading Will Catch Your Eye</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Voluptate, excepturi laudantium ipsa, 
+                <br>ducimus corporis dolor reprehenderit libero explicabo saepe obcaecati porro doloremque? 
+                <br>Saepe id voluptas qui
+                nam minus laborum incidunt.</p>
+        </div>
         <span require-file="./templates/services.html"></span>
         <span require-file="./templates/portfolio.html"></span>
         <span require-file="./templates/contact.html"></span>
@@ -38,7 +45,9 @@
 
 
     <!-- Optional JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 </body>
 
