--- a/website/index.html
+++ b/website/index.html
@@ -15,7 +15,7 @@
     <link href="assets/css/style.css?v0.1" rel="stylesheet">
 </head>
 
-<body class="p-3 mb-2 bg-white text-dark">
+<body>
 
     <!-- Navigation -->
     <div class="container-fluid">
