--- a/website/index.html
+++ b/website/index.html
@@ -24,14 +24,19 @@
         <span require-file="./templates/tagline.html"></span>
     </div>
     <!-- Page Content -->
-    <div class="container-fluid">
+    <div class="container-fluid p-3 mb-2 bg-white text-dark">
         <!-- First Featurette -->
-        <div class="containter">
-            <h1>The First Heading Will Catch Your Eye</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Voluptate, excepturi laudantium ipsa, 
-                <br>ducimus corporis dolor reprehenderit libero explicabo saepe obcaecati porro doloremque? 
+        <div class="container">
+            <h1 class="text-start ms-5 pd-5">The First Heading Will Catch Your Eye</h1>
+            <p class="text-start ms-5 pd-5">Ipsum dolor sit amet consectetur adipisicing elit.Voluptate, excepturi
+                laudantium ipsa,
+                <br>ducimus corporis dolor reprehenderit libero explicabo saepe obcaecati porro doloremque?
                 <br>Saepe id voluptas qui
-                nam minus laborum incidunt.</p>
+                nam minus laborum incidunt.
+            </p>
+            <div class="d-flex justify-content-end">
+                 <img src="https://mir-s3-cdn-cf.behance.net/projects/404/5f896a56216829.Y3JvcCw1NTYsNDM1LDIzMCwxNTM4.jpg" class="rounded-circle">
+            </div>
         </div>
         <span require-file="./templates/services.html"></span>
         <span require-file="./templates/portfolio.html"></span>
