última modificación primer día

--- a/website/index.html
+++ b/website/index.html
@@ -35,7 +35,7 @@
                 nam minus laborum incidunt.
             </p>
             <div class="d-flex justify-content-end">
-                 <img src="https://mir-s3-cdn-cf.behance.net/projects/404/5f896a56216829.Y3JvcCw1NTYsNDM1LDIzMCwxNTM4.jpg" class="rounded-circle">
+                 <img src="https://play-lh.googleusercontent.com/lUsgO5hPfx7fRshgN07lVUFa2U1vkakBiM__rYQSHp1c1KlbQ6ZMtSvcFuF9bu5cZw=w240-h480-rw" class="rounded-circle">
             </div>
         </div>
         <span require-file="./templates/services.html"></span>
