--- a/website/index.html
+++ b/website/index.html
@@ -27,7 +27,7 @@
         <div class="container-fluid p-3 mb-2 ">
                 <div class="row align-items-center g-1 mb-5">
                     <div class="col-md-8 pe-1 p-5">
-                        <h1 class="text-start">The First Heading Will Catch Your Eye</h1>
+                        <h1 class="text-start">The First Heading <span class="text-secondary">Will Catch Your Eye</span></h1>
                         <p class="text-start">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam
                             necessitatibus deleniti quos nostrum,<br>
                             saepe in dolores corrupti nemo ex tempora, eligendi sequi voluptas<br>
@@ -47,7 +47,7 @@
             <div class="container-fluid p-3 mb-2">
                 <div class="row align-items-center g-1 mb-5">
                     <div class="col-md-8 order-md-2 pe-1 ">
-                        <h1 class="text-end">The Second Heading Is Pretty Cool Too</h1>
+                        <h1 class="text-end">The Second Heading <span class="text-secondary">Is Pretty Cool Too</span> </h1>
                         <p class="text-end">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus accusantium
                             tempore <br>quae,quasi cum autem minima fugit sint omnis,
