--- a/website/index.html
+++ b/website/index.html
@@ -22,7 +22,7 @@
         <span require-file="./templates/tagline.html"></span>
     </div>
     <!-- Page Content -->
-    <div class="container-fluid p-3 mb-2 p-3 mb-2 bg-white text-dark ">
+    <div class="container-fluid p-3 mb-2 p-3 mb-2 text-dark ">
         <!-- First Featurette -->
         <div class="container-fluid p-3 mb-2 ">
                 <div class="row align-items-center g-1 mb-5">
